--- a/BingeWatching/BingeWatching.csproj
+++ b/BingeWatching/BingeWatching.csproj
@@ -3,4 +3,7 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <OutputType>exe</OutputType>
     </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    </ItemGroup>
 </Project>
